fix: horizontal scroll if status is "unconfirmed"

--- a/src/app/search-page/search-page.component.scss
+++ b/src/app/search-page/search-page.component.scss
@@ -106,6 +106,7 @@
 }
 
 .bug-status {
+  overflow: hidden;
   width: 5em;
   text-align: center;
 }
